<resources>
    <string name="app_name">Teoria_Dei_Segnali</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sound_recording_example2">SoundRecordingExample2</string>

    <string name="app_info">Teoria Dei Segnali\nTerreni Maurizio</string>
    <string name="choose_format_title">Choose Audio Format</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>
    <string name="crypt_info">Seleziona frequenza FFT</string>
    <string name="crypt">Esegui FFT</string>
    <string name="bottone_play_ori">File Originale</string>
    <string name="bottone_play_cri">File Criptato</string>
    <string name="bottone_play_decri">File Decriptato</string>




        <string-array name="frequency_array">
            <item>8</item>
            <item>16</item>
            <item>32</item>
            <item>64</item>
            <item>128</item>
            <item>256</item>
            <item>512</item>
            <item>1024</item>
        </string-array>

</resources>
